First Lab work on computer technologies added

--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики и Информатики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка вариантов использования системы и сценариев использования системы}{Разработка вариантов использования системы и сценариев использования системы}}
+{\texorpdfstring{Проектирование систем нечеткого логического вывода}{Проектирование систем нечеткого логического вывода}}
 \newcommand{\courseName}
-{Ведение крупных программных проектов}
+{Современные компьютерные технологии}
 \newcommand{\labNumber}
-{6}
+{1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Куриленко Иван Евгеньевич}
+{Варшавский Павел Романович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.Е.~Куриленко}
+{П.Р.~Варшавский}
 
 
 % To avoid conflict with beamer class use \providecommand
