--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики и Информатики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка вариантов использования системы и сценариев использования системы}{Разработка вариантов использования системы и сценариев использования системы}}
+{\texorpdfstring{Симулятор зомби апокалипсиса. Описание системы.}{Симулятор зомби апокалипсиса. Описание системы.}}
 \newcommand{\courseName}
-{Ведение крупных программных проектов}
+{Многоагентные системы}
 \newcommand{\labNumber}
-{6}
+{1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Куриленко Иван Евгеньевич}
+{Фоминых Игорь Борисович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.Е.~Куриленко}
+{И.Б.~Фоминых}
 
 
 % To avoid conflict with beamer class use \providecommand
