--- a/LabWork.tex
+++ b/LabWork.tex
@@ -28,5 +28,6 @@
 
 % Структура диссертации (ГОСТ Р 7.0.11-2011, 4)
 \include{LabWork/title}           % Титульный лист
-\include{LabWork/lab1}
+%\include{LabWork/lab1}
+\include{LabWork/lab2}
 \end{document}
