--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики и Информатики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Проектирование систем нечеткого логического вывода}{Проектирование систем нечеткого логического вывода}}
+{\texorpdfstring{Реализация генетического алгоритма для задачи транспортировки}{Реализация генетического алгоритма для задачи транспортировки}}
 \newcommand{\courseName}
 {Современные компьютерные технологии}
 \newcommand{\labNumber}
-{1}
+{2}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
