--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,11 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики и Информатики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Симулятор зомби апокалипсиса. Описание системы.}{Симулятор зомби апокалипсиса. Описание системы.}}
+{\texorpdfstring{Симулятор зомби апокалипсиса. Описание системы.}{Симулятор зомби апокалипсиса. Описание сценариев.}}
 \newcommand{\courseName}
 {Многоагентные системы}
 \newcommand{\labNumber}
-{1}
+{2}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
