--- a/LabWork.tex
+++ b/LabWork.tex
@@ -20,6 +20,8 @@
 \input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
 \usepackage[section]{placeins}
 
+\renewcommand\thesection{\arabic{section}}
+
 \begin{document}
 
 \input{common/renames}                   % Переопределение именований
