--- a/common/data.tex
+++ b/common/data.tex
@@ -13,7 +13,7 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики и Информатики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Симулятор зомби апокалипсиса. Описание системы.}{Симулятор зомби апокалипсиса. Описание сценариев.}}
+{\texorpdfstring{Симулятор зомби апокалипсиса. Описание сценариев.}{Симулятор зомби апокалипсиса. Описание сценариев.}}
 \newcommand{\courseName}
 {Многоагентные системы}
 \newcommand{\labNumber}
