--- a/common/data.tex
+++ b/common/data.tex
@@ -11,7 +11,7 @@
 {А.А.~Ефанов}
 
 \newcommand{\kafedra}                % Кафедра
-{Кафедра Прикладной Математики и Информатики}
+{Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
 {\texorpdfstring{Симулятор зомби апокалипсиса. Описание сценариев.}{Симулятор зомби апокалипсиса. Описание сценариев.}}
 \newcommand{\courseName}
