--- a/LabWork.tex
+++ b/LabWork.tex
@@ -19,6 +19,8 @@
 
 \input{Dissertation/inclusioncontrol}    % Управление компиляцией отдельных частей диссертации
 \usepackage[section]{placeins}
+\usepackage{hyperref}
+
 
 \renewcommand\thesection{\arabic{section}}
 
