--- a/common/data.tex
+++ b/common/data.tex
@@ -11,13 +11,13 @@
 {А.А.~Ефанов}
 
 \newcommand{\kafedra}                % Кафедра
-{Кафедра Прикладной Математики и Информатики}
+{Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Симулятор зомби апокалипсиса. Описание сценариев.}{Симулятор зомби апокалипсиса. Описание сценариев.}}
+{\texorpdfstring{Симулятор зомби апокалипсиса. Реализация.}{Симулятор зомби апокалипсиса. Реализация.}}
 \newcommand{\courseName}
 {Многоагентные системы}
 \newcommand{\labNumber}
-{2}
+{3}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
