--- a/LabWork/lab2.tex
+++ b/LabWork/lab2.tex
@@ -46,3 +46,8 @@
 	
 
 \section{Пример работы системы}
+
+	\lstinputlisting[caption={Сценарий 1}]{listings/example1.txt}
+	\lstinputlisting[caption={Сценарий 2}]{listings/example2.txt}
+	\lstinputlisting[caption={Сценарий 3}]{listings/example3.txt}
+	\lstinputlisting[caption={Сценарий 4}]{listings/example4.txt}
