--- a/common/data.tex
+++ b/common/data.tex
@@ -11,13 +11,13 @@
 {А.А.~Ефанов}
 
 \newcommand{\kafedra}                % Кафедра
-{Кафедра Прикладной Математики и Информатики}
+{Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
 {\texorpdfstring{Разработка вариантов использования системы и сценариев использования системы}{Разработка вариантов использования системы и сценариев использования системы}}
 \newcommand{\courseName}
 {Ведение крупных программных проектов}
 \newcommand{\labNumber}
-{6}
+{1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
