Lab template formed

--- a/LabWork.tex
+++ b/LabWork.tex
@@ -25,10 +25,7 @@
 \renewcommand\thesection{\arabic{section}} %номера секций не содержат номер главы
 
 \begin{document}
-
 	\input{common/renames}                   % Переопределение именований
-	
-	% Структура диссертации (ГОСТ Р 7.0.11-2011, 4)
 	\include{LabWork/title}           % Титульный лист
-	\include{LabWork/lab6}
+	\include{LabWork/lab}
 \end{document}
