--- a/common/data.tex
+++ b/common/data.tex
@@ -13,9 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Разработка вариантов использования системы и сценариев использования системы}{Разработка вариантов использования системы и сценариев использования системы}}
+{\texorpdfstring{Тема}{Тема}}
 \newcommand{\courseName}
-{Ведение крупных программных проектов}
+{Название Предмета}
 \newcommand{\labNumber}
 {1}
 \newcommand{\thesisCity}               % Диссертация, город защиты
@@ -26,9 +26,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Куриленко Иван Евгеньевич}
+{Фамилия Имя Отчество}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.Е.~Куриленко}
+{И.О.~Фамилия}
 
 
 % To avoid conflict with beamer class use \providecommand
