--- a/LabWork/lab2.tex
+++ b/LabWork/lab2.tex
@@ -39,5 +39,112 @@
 			\end{lstlisting}
 		\end{ListingEnv}%
 	
-	\subsection{}
+	
+	\subsection{Подбор параметров симуляции}
+		\subsubsection{Размер популяции}
+			Т.к. в данном фреймворке невозможно фиксировать начальную выборку, симуляция проводилась 10 раз, после чего определялось среднее. Критерий останова - количество поколений равно 100 000.
+			
+			\begin{table}[h]
+				\centering
+				\caption{Влияние размера популяции}
+				\label{my-label}
+				\begin{tabular}{|c|c|c|}
+					\hline
+					Размер популяции & ср. время генерации, сек & ср. мин. фитнесс \\ \hline
+					10 & 10.31 & 25.36 \\ \hline
+					100 & 58.74 & 24.88 \\ \hline
+					140 & 74.63 & 24.8 \\ \hline
+				\end{tabular}
+			\end{table}
+		
+			Размер популяции 100 достаточно хорошо приближает к минимуму в 24.8 сек.
+			\FloatBarrier
+		\subsubsection{Селектор}
+			Здесь и далее критерий останова -- достижение порога в 24.8 сек.
+			
+			\begin{table}[h]
+				\centering
+				\caption{Влияние выбранного селектора}
+				\label{my-label}
+				\begin{tabular}{|c|c|c|c|}
+					\hline
+					\multicolumn{2}{|c|}{Селектор} & ср. время, сек. & ср. Количество поколений \\ \hline
+					\multirow{10}{*}{Состязание} & 5 & 77,74 & 57620 \\ \cline{2-4} 
+					& 10 & 94,22 & 85784 \\ \cline{2-4} 
+					& 15 & 87,82 & 78951 \\ \cline{2-4} 
+					& 20 & 70,06 & 60142 \\ \cline{2-4} 
+					& 25 & 90,01 & 72168 \\ \cline{2-4} 
+					& 30 & 116,48 & 86680 \\ \cline{2-4} 
+					& 35 & 93,96 & 74218 \\ \cline{2-4} 
+					& 40 & 148,77 & 113463 \\ \cline{2-4} 
+					& 45 & 160,62 & 111904 \\ \cline{2-4} 
+					& 50 & 175,42 & 109056 \\ \hline
+					\multicolumn{2}{|c|}{\begin{tabular}[c]{@{}c@{}}Стохастический\\ универсальный\end{tabular}} & \multicolumn{2}{c|}{не достиг решения за приемлемое время} \\ \hline
+					\multicolumn{2}{|c|}{Монте-Карло} & \multicolumn{2}{c|}{не достиг решения за приемлемое время} \\ \hline
+					\multicolumn{2}{|c|}{Сокращение} & 118,65 & 97090 \\ \hline
+					\multirow{8}{*}{\begin{tabular}[c]{@{}c@{}}Экспоненциальное\\ ранжирование\end{tabular}} & 0 & 91,77 & 65537 \\ \cline{2-4} 
+					& 0,2 & 91,14 & 76180 \\ \cline{2-4} 
+					& 0,4 & 87,39 & 79575 \\ \cline{2-4} 
+					& 0,6 & 131,93 & 64854 \\ \cline{2-4} 
+					& 0,8 & 64,82 & 50218 \\ \cline{2-4} 
+					& 0.85 & 38,19 & 34691 \\ \cline{2-4} 
+					& 0.9 & 70,41 & 67125 \\ \cline{2-4} 
+					& 0.95 & 59,43 & 57725 \\ \hline
+					\multirow{3}{*}{Больцмана} & 2 & 148,49 & 103226 \\ \cline{2-4} 
+					& 3 & 100,56 & 72088 \\ \cline{2-4} 
+					& 4 & 212,94 & 148157 \\ \hline
+				\end{tabular}
+			\end{table}
+			\FloatBarrier
+		
+			Оптимальным является селектор экспоненциального ранжирования в параметром 0,85.
+		
+		\subsubsection{Мутаторы/Рекомбинаторы}
+			Для выбраной структуры генотипа имеет смысл использовать мутаторы и рекомбинаторы типов MeanAlterer,GaussianAlterer и Mutator.
+			
+			\begin{table}[h]
+				\centering
+				\caption{Влияние различных мутаторов и рекомбинаторов}
+				\label{my-label}
+				\begin{tabular}{|c|c|c|c|}
+					\hline
+					\multicolumn{2}{|c|}{Мутатор/Рекомбинатор} & ср. время, сек. & ср. Количество поколений \\ \hline
+					\multirow{10}{*}{\begin{tabular}[c]{@{}c@{}}Простейший \\ Мутатор\end{tabular}} & 0,05 & 68,30 & 109295 \\ \cline{2-4} 
+					& 0,1 & 67,58 & 85445 \\ \cline{2-4} 
+					& 0,15 & 52,22 & 51368 \\ \cline{2-4} 
+					& 0,2 & 55,20 & 50798 \\ \cline{2-4} 
+					& 0,25 & 66,97 & 34450 \\ \cline{2-4} 
+					& 0,3 & 71,61 & 48011 \\ \cline{2-4} 
+					& 0,35 & 56,55 & 37317 \\ \cline{2-4} 
+					& 0,4 & 72,57 & 38250 \\ \cline{2-4} 
+					& 0,45 & 98,84 & 55808 \\ \cline{2-4} 
+					& 0,5 & 419,52 & 157323 \\ \hline
+					\multirow{19}{*}{\begin{tabular}[c]{@{}c@{}}Мутатор\\ Гаусса\end{tabular}} & 0,05 & 20,86 & 50091 \\ \cline{2-4} 
+					& 0,1 & 5,21 & 9973 \\ \cline{2-4} 
+					& 0,15 & 2,27 & 3537 \\ \cline{2-4} 
+					& 0,2 & 4,21 & 1727 \\ \cline{2-4} 
+					& 0,25 & 1,70 & 1820 \\ \cline{2-4} 
+					& 0.3 & 1,08 & 1198 \\ \cline{2-4} 
+					& 0.35 & 1,19 & 1112 \\ \cline{2-4} 
+					& 0.4 & 0,82 & 686 \\ \cline{2-4} 
+					& 0,45 & 1,17 & 755 \\ \cline{2-4} 
+					& 0,5 & 0,76 & 578 \\ \cline{2-4} 
+					& 0,55 & 0,92 & 736 \\ \cline{2-4} 
+					& 0,6 & 1,56 & 624 \\ \cline{2-4} 
+					& 0,65 & 0,46 & 348 \\ \cline{2-4} 
+					& 0,7 & 0,89 & 619 \\ \cline{2-4} 
+					& 0,75 & 0,51 & 353 \\ \cline{2-4} 
+					& 0,8 & 0,93 & 458 \\ \cline{2-4} 
+					& 0,85 & 0,62 & 375 \\ \cline{2-4} 
+					& 0,9 & 0,60 & 430 \\ \cline{2-4} 
+					& 0,95 & 1,21 & 549 \\ \hline
+					\multicolumn{2}{|c|}{\begin{tabular}[c]{@{}c@{}}Рекомбинатор\\ среднего значения\end{tabular}} & \multicolumn{2}{c|}{не достиг решения за приемлемое время} \\ \hline
+				\end{tabular}
+			\end{table}
+			\FloatBarrier
+			Из таблицы видно, что для данной задачи оптимально выбрать мутатор Гаусса со значением вероятности, лежащем на отрезке $[0.75 , 0.85] $
+			
+			
+		\subsection{Листинг}
+			Листинг программы доступен на \href{https://github.com/goto1134/TransportJenetics}{GitHub}.
 	
