--- a/LabWork/lab2.tex
+++ b/LabWork/lab2.tex
@@ -39,6 +39,42 @@
 			\end{lstlisting}
 		\end{ListingEnv}%
 	
+	\subsection{Целевая функция}
+		Целевая функция определена в задании и вычисляет время. 
+		\begin{ListingEnv}[H]
+		\caption{Описание целевой функции}
+		% далее метка для ссылки:
+		% окружение учитывает пробелы и табляции и приеняет их в сответсвии с настройкми
+			\begin{lstlisting}[language={Java}]
+			static double run(double[] speedArray) {
+				Box box = new Box();
+				Mover mover = new Mover(speedArray);
+				
+				double time = 0;     // initial time
+				double dt = 0.2; // time step of simulation
+				double springElasticity = 0.5;  // coefficient of elasticity of the spring (as in Hooke's Law)
+				
+				while (mover.getCoordinate() <= 100
+				|| Math.abs(mover.getCoordinate() - box.getCoordinate()) > 0.1
+				|| Math.abs(box.getSpeed()) > 0.1) {
+					double force_spring = springElasticity * (mover.getCoordinate() - box.getCoordinate());
+					double force_friction = box.getFriction() * box.getSpeed();
+					double force_total = force_spring + force_friction;
+					double acceleration = force_total / box.getMass();
+					
+					box.move(box.getSpeed() * dt);
+					box.accelerate(acceleration * dt);
+					time += dt;
+					mover.move(mover.getSpeed() * dt);
+				}
+				return time;
+				
+			}
+			\end{lstlisting}
+		\end{ListingEnv}%
+		
+		Задача алгоритма -- минимизировать данную функцию.
+	
 	
 	\subsection{Подбор параметров симуляции}
 		\subsubsection{Размер популяции}
@@ -50,7 +86,7 @@
 				\label{my-label}
 				\begin{tabular}{|c|c|c|}
 					\hline
-					Размер популяции & ср. время генерации, сек & ср. мин. фитнесс \\ \hline
+					Размер популяции & ср. время генерации, сек & ср. мин. зн-е целевой ф-ии \\ \hline
 					10 & 10.31 & 25.36 \\ \hline
 					100 & 58.74 & 24.88 \\ \hline
 					140 & 74.63 & 24.8 \\ \hline
@@ -60,7 +96,28 @@
 			Размер популяции 100 достаточно хорошо приближает к минимуму в 24.8 сек.
 			\FloatBarrier
 		\subsubsection{Селектор}
-			Здесь и далее критерий останова -- достижение порога в 24.8 сек.
+			Библиотека Jenetics содержит ряд селекторов:
+			\begin{itemize}
+				\item Tournament Selector (Состязание) -- Происходит состязание случайной выборки из $ n $ индивидов популяции. Индивид побеждает только если значение целевой функции на нём лучше других $n-1$ соперников. Худший индивид никогда не выживает. 
+
+				\item Truncation Selector (Сокращение) -- Индивиды сортируются по значению целевой функции. Выбираются n лучших.
+				\item Monte Carlo Selector -- Случайно выбирает индивидов из популяции.
+				\item Linear Rank Selector (Линейное ранжирование) -- Индивиды сортируются по значению целевой функции. Ранг N присвоен лучшему индивиду, а ранг 1 худшему. Вероятность выбора индивида $ i $ линейно ассоциируются с индивидами соответственно их рангу по формуле:
+				
+				\[P(i) = \dfrac{1}{N}(n^-+(n^+-n^-)\dfrac{i-1}{N-1}),\]
+				где $ \frac{n^-}{N} $ - вероятность худшего индивида быть выбранным, а $ \frac{n^+}{N} $ - вероятность лучшего индивида быть выбранным.
+				\item Exponential Rank Selector (Экспоненциальное ранжирование) -- Аналогично с линейным, ассоциирует с индивидом вероятность, используя экспоненциальную функцию:
+				\[P(i)=(c-1)\dfrac{c^{i-1}}{c^N-1},\]
+				где значение $ с $ должно быть в диапазоне $[0...1)$.
+				\item Boltzmann Selector (Больцмана) -- Вероятность выбора селектором Больцмана определена как
+				\[P(i)=\dfrac{e^{b-f}}{Z},\]
+				где $ b $ - параметр, контролирующий интенсивность селекции, а $ Z $ определена как
+				\[Z=\sum_{i=1}^{n}e^{f_x},\] 
+				\item Stochastic Universal Selector (Стохастический универсальный) – строится линия, в которой каждому родителю ставится в соответствие её часть определенного размера (в зависимости от вероятности родителя), затем алгоритм пробегает по линии шагами одинаковой длины и выбирает родителей в зависимости от того, на какую часть линии попал шаг.
+			\end{itemize}
+		
+		
+			Определим наилучший селектор для решения данной задачи. Здесь и далее критерий останова -- достижение порога в 24.8 сек. За величину популяции примем значение 100.
 			
 			\begin{table}[h]
 				\centering
@@ -82,6 +139,8 @@
 					\multicolumn{2}{|c|}{\begin{tabular}[c]{@{}c@{}}Стохастический\\ универсальный\end{tabular}} & \multicolumn{2}{c|}{не достиг решения за приемлемое время} \\ \hline
 					\multicolumn{2}{|c|}{Монте-Карло} & \multicolumn{2}{c|}{не достиг решения за приемлемое время} \\ \hline
 					\multicolumn{2}{|c|}{Сокращение} & 118,65 & 97090 \\ \hline
+					\multicolumn{2}{|c|}{Линейное ранжирование} &
+					\multicolumn{2}{c|}{не достиг решения за приемлемое время} \\ \hline
 					\multirow{8}{*}{\begin{tabular}[c]{@{}c@{}}Экспоненциальное\\ ранжирование\end{tabular}} & 0 & 91,77 & 65537 \\ \cline{2-4} 
 					& 0,2 & 91,14 & 76180 \\ \cline{2-4} 
 					& 0,4 & 87,39 & 79575 \\ \cline{2-4} 
@@ -100,7 +159,18 @@
 			Оптимальным является селектор экспоненциального ранжирования в параметром 0,85.
 		
 		\subsubsection{Мутаторы/Рекомбинаторы}
-			Для выбраной структуры генотипа имеет смысл использовать мутаторы и рекомбинаторы типов MeanAlterer,GaussianAlterer и Mutator.
+			Для выбраной структуры генотипа имеет смысл использовать мутаторы и рекомбинаторы типов MeanAlterer, GaussianMutator и Mutator.
+			
+			\begin{itemize}
+				\item Mean Alterer - вероятностный рекомбинатор.
+				\item Gaussian Mutator (мутатор Гаусса) -- выбирает новое значение соответственно распределению Гаусса. Дисперсия нового значения будет равна
+				\[\hat{\sigma }^2 = \left ( \frac{ g_{max} - g_{min} }{4}\right )^2.\]
+				\item Mutator (Мутатор) --  Вероятность мутации $ P(m) $ -- вероятность того, что определённый ген из всей популяции мутирует. Количество доступных для мутации генов :
+				
+				\[N_P N_{g}=N_P \sum_{i=0}^{N_{G}-1}N_{C[i]}\]
+				где $ N_P $ -- размер популяции, $ N_G $ --  количество генов в генотипе. Среднее количество генов, мутировавших данным мутатором:
+				\[\hat{\mu}=N_{P}N_{g}\cdot P(m).\]
+			\end{itemize}
 			
 			\begin{table}[h]
 				\centering
